--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM balenalib/raspberrypi3:bullseye
+FROM ubuntu:22.04
 
 RUN apt-get -y update && \
     apt-get -y install --no-install-recommends \
