chore: change contents of `message.txt`

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Compress and Generate Archive
         run: |
-          echo 'Hello, World!' >> message.txt
+          echo 'Hello, Galaxy!' >> message.txt
           zip -r ${{ github.workspace }}/devtools.zip message.txt
 
       - name: Prepare Release
