--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,6 +25,7 @@ jobs:
       - name: Compress and Generate Archive
         run: |
           echo 'Hello, Galaxy!' >> message.txt
+          echo 'Commit: ${{ github.sha }}' >> message.txt
           zip -r ${{ github.workspace }}/devtools.zip message.txt
 
       - name: Prepare Release
