--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -43,3 +43,4 @@ jobs:
           prerelease: true
           artifacts: |
             ${{ github.workspace }}/devtools-${{ github.ref_name }}.zip
+          commit: ${{ github.sha }}
