--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,10 +23,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Initialize Environment Variables
+        if: startsWith(github.ref, 'refs/tags/')
         run: |
           # Create an environment variable called APP_VERSION.
           # If the tag is v1.0.0, the APP_VERSION will be 1.0.0.
-          echo "APP_VERSION=${GITHUB_REF#/refs/tags}" >> $GITHUB_ENV
+          # echo "APP_VERSION={{ github.ref_name | replace('v', '') }}" >> $GITHUB_ENV
+          echo "APP_VERSION={{ github.ref_name }}" >> $GITHUB_ENV
 
       - name: Compress and Generate Archive
         run: |
