--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,6 +34,7 @@ jobs:
           echo "APP_VERSION=${APP_VERSION:-0.0.0}"
           echo 'Hello, Galaxy!' >> message.txt
           echo 'Commit: ${{ github.sha }}' >> message.txt
+          echo 'Version: $APP_VERSION' >> message.txt
           zip -r ${{ github.workspace }}/devtools.zip message.txt
 
       - name: Prepare Release
