--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,15 +23,15 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Initialize Environment Variables
-        if: startsWith(github.ref, 'refs/tags/')
         run: |
-          # Create an environment variable called APP_VERSION.
-          # If the tag is v1.0.0, the APP_VERSION will be 1.0.0.
-          echo "APP_VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
+          if [[ $GITHUB_REF == refs/tags/v* ]]; then
+            echo "APP_VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
+          else
+            echo "APP_VERSION=x.x.x" >> $GITHUB_ENV
+          fi
 
       - name: Compress and Generate Archive
         run: |
-          echo "APP_VERSION=${APP_VERSION:-0.0.0}"
           echo 'Hello, Galaxy!' >> message.txt
           echo 'Commit: ${{ github.sha }}' >> message.txt
           echo "Version: $APP_VERSION" >> message.txt
