--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,10 +46,8 @@ jobs:
 
       - name: Create Release
         if: startsWith(github.ref, 'refs/tags/')
-        uses: ncipollo/release-action@v1.11.2
+        uses: softprops/action-gh-release@v2
         with:
-          allowUpdates: true
           prerelease: true
-          artifacts: |
+          files: |
             ${{ github.workspace }}/devtools-${{ github.ref_name }}.zip
-          commit: ${{ github.sha }}
